--- a/css/themes/custom/theme-general/carousel.css
+++ b/css/themes/custom/theme-general/carousel.css
@@ -1,5 +1,5 @@
 .carousel .carousel-caption h1,
 .carousel .carousel-caption h2 {
     text-shadow: none;
-    color: var(--colorNeutral00);
+    color: var(--colorNeutral00, #ffffff);
 }
