--- a/css/themes/custom/theme-general/login.css
+++ b/css/themes/custom/theme-general/login.css
@@ -1,12 +1,12 @@
 .siginPanel{
-    background-color: var(--colorLight40);
+    background-color: var(--colorLight40, #eeeeee);
 }
 
 .login-view {
     flex-direction: column-reverse;
-    background-color: var(--colorNeutral00);
+    background-color: var(--colorNeutral00, #FFFFFF);
     border-radius: 3px;
-    padding: var(--distanceSmall);
+    padding: var(--distanceSmall, 15px);
     margin-top: 20px;
 }
 
@@ -17,5 +17,5 @@
 .login-view .sign-up {
     text-align: center;
     padding: 0;
-    margin-top: var(--distanceSmallest);
+    margin-top: var(--distanceSmallest, 5px);
 }
