--- a/css/themes/custom/theme-general/slider.css
+++ b/css/themes/custom/theme-general/slider.css
@@ -1,15 +1,15 @@
 .k-slider .k-slider-track,
 .k-slider .k-slider-selection {
-    border-radius: var(--borderRadiusSmallest);
+    border-radius: var(--borderRadiusSmallest, 5px);
 }
 
 .k-slider .k-slider-selection {
-    background-color: var(--colorDefault10);
+    background-color: var(--colorDefault10, #d9d9d9);
     margin-top: -4px;
 }
 
 .k-slider .k-draghandle,
 .k-slider .k-draghandle.k-state-focused,
 .k-slider .k-draghandle.k-state-focused:link {
-    background-color: var(--backgroundColor);
+    background-color: var(--backgroundColor, #ffffff);
 }
